# furhat-tutorials

audiofeed-demo/: README.md  build.gradle
audiofeed-demo/src/main/kotlin/furhatos/demo/: main.kt
camerafeed-demo/: README.md  setup.cfg
camerafeed-demo/object-detection-server/: furhattube.py
