[metadata]
name = camerafeed-demo
version = 0.0.1

[options]
install_requires =
    requests
    opencv-contrib-python-headless
    cmake
    distro
    numpy
    opencv-contrib-python-headless
    packaging
    pyparsing
    pyzmq
    scikit-build
    six
    zmq
    importlib-metadata; python_version<"3.10"